@@ -91,8 +91,6 @@ void up_unblock_task(_TCB *tcb)
     {
       _TCB *rtcb = (_TCB*)g_readytorun.head;
 
-      lldbg("Unblocking TCB=%p\n", tcb);
-
       /* Remove the task from the blocked task list */
 
       sched_removeblocked(tcb);
@@ -130,7 +128,6 @@ void up_unblock_task(_TCB *tcb)
                */
 
               rtcb = (_TCB*)g_readytorun.head;
-              lldbg("New Active Task TCB=%p\n", rtcb);
 
               /* Then switch contexts */
 
@@ -151,7 +148,6 @@ void up_unblock_task(_TCB *tcb)
                */
 
               rtcb = (_TCB*)g_readytorun.head;
-              lldbg("New Active Task TCB=%p\n", rtcb);
 
               /* Then switch contexts */
 
